# rbdl-toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake_cpp.yml
cmake/: FindIFW.cmake  FindRBDL.cmake
examples/jumping/: SegmentLengths.txt  animation.csv  example_static.c3d  jump.c3d  model_deLeva_reduced.lua  model_deLeva_reduced_meshes_updated.lua
examples/pendulum/: .fuse_hidden0001aa7d00000003
examples/pendulum_kinematic/: pendulum.csv  pendulum.lua  pendulum.urdf  pendulum1.csv  pendulum1.lua
extra/: buildplugin.desktop  installer_config.xml.cmake  installer_package.xml.cmake  mesh_center.py  mesh_normalize.py  mesh_normalize_center.py  mesh_normalize_keep_aspect_center.py  mesh_rotate_90deg.py  mk_appimage.sh  mk_dmg.sh  mk_plugin.sh  mk_pluginbuilder.sh  mk_win_installer.bat  rbdl-toolkit.icns  win_create_installer.bat.cmake  win_install.bat  win_pack.bat.cmake  win_pack.cmake  windeploy.bat
include/: ModelSelectorDialog.h  SceneGroupsWidget.h  SceneWidget.h  Timeline.h  ToolkitApp.h  ToolkitSettings.h  VectorEditor.h  csv_input_sanatiser.hpp  errors.h  luamodel_wrapper.h  math_util.h  rbdl_wrapper.h  render_util.h  toolkit_config.h.cmake  toolkit_errors.h  toolkit_interfaces.h  urdfmodel_wrapper.h  util.h  variantdelegate.h  wrapper_extention.h
plugins/: CMakeLists.txt
plugins/AnimationPlugin/: AnimationModelExtension.cc  AnimationModelExtension.h  AnimationModelExtention.cc  AnimationModelExtention.h  AnimationPlugin.cc  AnimationPlugin.h  CMakeLists.txt  README.md  metadata.json
plugins/AnimationPlugin/include/: filterinput.hpp
plugins/CameraOperatorPlugin/: CMakeLists.txt  CameraOperator.cc  CameraOperator.h  README.md  metadata.json
plugins/ForceTorquePlugin/: ArrowFieldModelExtension.cc  ArrowFieldModelExtension.h  ArrowFieldModelExtention.cc  ArrowFieldModelExtention.h  CMakeLists.txt  ForceTorquePlugin.cc  ForceTorquePlugin.h  README.md  metadata.json
plugins/InverseKinematicsPlugin/: CMakeLists.txt  InverseKinematicsPlugin.cc  InverseKinematicsPlugin.h  README.md  metadata.json
plugins/MotionMarkerPlugin/: CMakeLists.txt  ModelMarkerExtension.cc  ModelMarkerExtension.h  ModelMarkerExtention.cc  ModelMarkerExtention.h  MotionMarkerExtension.cc  MotionMarkerExtension.h  MotionMarkerExtention.cc  MotionMarkerExtention.h  MotionMarkerPlugin.cc  MotionMarkerPlugin.h  README.md  metadata.json
plugins/PythonPlugin/: CMakeLists.txt  EmbeddedPython.cc  EmbeddedPython.h  PythonPlugin.cc  PythonPlugin.h  PythonSocket.cc  PythonSocket.h  PythonToolkitInterface.h  README.md  metadata.json
plugins/RenderPlugin/: CMakeLists.txt  README.md  RenderImageDialog.h  RenderImageSeriesDialog.h  RenderPlugin.cc  RenderPlugin.h  RenderVideoDialog.h  metadata.json
plugins/RenderPlugin/ui/: RenderImageDialog.ui  RenderImageSeriesDialog.ui  RenderVideoDialog.ui
plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cc  TestPlugin.h  metadata.json
plugins/VisualExtrasPlugin/: CMakeLists.txt  FrameAxisModelExtension.cc  FrameAxisModelExtension.h  README.md  VisualExtrasPlugin.cc  VisualExtrasPlugin.h  metadata.json
snap/: snapcraft.yaml
src/: ModelSelectorDialog.cc  SceneWidget.cc  Timeline.cc  ToolkitApp.cc  ToolkitApp.h  ToolkitSettings.cc  luamodel_wrapper.cc  main.cc  math_util.cc  rbdl_wrapper.cc  render_util.cc  toolkit_errors.cc  urdfmodel_wrapper.cc  util.cc  variantdelegate.cc
ui/: ModelSelector.ui  SceneGroupList.ui  SettingsEditor.ui  Timeline.ui  VectorEditor.ui
wiki/: creatingModels.md  gettingStarted.md  inverseDynamics.md  settings.md  tmp.md
