SET( TOOLKIT_PLUGIN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR} )
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${TOOLKIT_PLUGIN_OUTPUT_DIR})

OPTION ( TOOLKIT_BUILD_CORE_PLUGINS "Build core plugins" ON )
OPTION ( TOOLKIT_BUILD_OPTIONAL_PLUGINS "Build optional plugins" OFF )

IF (TOOLKIT_BUILD_CORE_PLUGINS)
	ADD_SUBDIRECTORY(AnimationPlugin)
ENDIF (TOOLKIT_BUILD_CORE_PLUGINS)

IF (TOOLKIT_BUILD_OPTIONAL_PLUGINS)
	ADD_SUBDIRECTORY(TestPlugin)
ENDIF (TOOLKIT_BUILD_OPTIONAL_PLUGINS)
