PROJECT(AnimationPlugin)

SET(AnimationPlugin_SRCS
	AnimationPlugin.cc
	AnimationModelExtension.cc
)

SET(AnimationPlugin_MOC_HDRS
	AnimationPlugin.h
	include/toolkit_interfaces.h
)

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${BOOST_INCLUDE_DIR})

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)
#ADD_DEFINITIONS(-DQT_NO_DEBUG)

ADD_LIBRARY (animationplugin SHARED ${AnimationPlugin_SRCS})

TARGET_LINK_LIBRARIES (animationplugin
    ${QT_LIBRARIES}
	${RBDL_LIBRARY}
	toolkitlib
)
TARGET_COMPILE_DEFINITIONS (animationplugin PUBLIC TOOLKIT_COMPILE_PLUGIN)

INSTALL( TARGETS animationplugin LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
INSTALL( TARGETS animationplugin RUNTIME DESTINATION ${PLUGIN_INSTALL_DIR})
