PROJECT(CameraOperatorPlugin)
	
SET(CameraOperatorPlugin_SRCS
	CameraOperator.cc
)

SET(CameraOperatorPlugin_MOC_HDRS
	CameraOperator.h
	include/toolkit_interfaces.h
)

SET(CMAKE_AUTOMOC ON)
	
INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)

ADD_LIBRARY (cameraoperatorplugin SHARED ${CameraOperatorPlugin_SRCS})

TARGET_LINK_LIBRARIES (cameraoperatorplugin 
	${QT_LIBRARIES} 
	${QT_QTXML_LIBRARY} 
	Qt5::Core
	Qt5::Gui
	Qt5::Widgets
	Qt5::3DCore
	Qt5::3DExtras
	Qt5::3DRender
	Qt5::3DInput
	${RBDL_LIBRARY}
	toolkitlib
)

INSTALL( TARGETS cameraoperatorplugin LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})	
