PROJECT(ForceTorquePlugin)

SET(ForceTorquePlugin_SRCS
	ForceTorquePlugin.cc
	ArrowFieldModelExtension.cc
)

SET(ForceTorquePlugin_MOC_HDRS
	ForceTorquePlugin.h
	include/toolkit_interfaces.h
)

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${BOOST_INCLUDE_DIR})

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)
#ADD_DEFINITIONS(-DQT_NO_DEBUG)

ADD_LIBRARY (forcetorqueplugin SHARED ${ForceTorquePlugin_SRCS})

TARGET_LINK_LIBRARIES (forcetorqueplugin
    ${QT_LIBRARIES}
	${RBDL_LIBRARY}
	toolkitlib
)
TARGET_COMPILE_DEFINITIONS (forcetorqueplugin PRIVATE TOOLKIT_COMPILE_PLUGIN)

IF(NOT MSVC)
INSTALL( TARGETS forcetorqueplugin
         RUNTIME DESTINATION ${PLUGIN_INSTALL_DIR}
         LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
ENDIF()
