PROJECT(VisualExtrasPlugin)


SET(Plugin_SRCS

	VisualExtrasPlugin.cc
)

SET(VisualExtrasPlugin_MOC_HDRS
	include/toolkit_interfaces.h
	VisualExtrasPlugin.h
)

SET(CMAKE_AUTORCC ON )
SET(CMAKE_AUTOUIC ON )
SET(CMAKE_AUTOMOC ON )



INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)

ADD_LIBRARY (visualextrasplugin SHARED ${Plugin_SRCS})

TARGET_LINK_LIBRARIES (visualextrasplugin
	${QT_LIBRARIES}
	${RBDL_LIBRARY}
	toolkitlib
)

INSTALL( TARGETS visualextrasplugin LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
